# cookiecutter

./: README.rst  cookiecutter.json
{{cookiecutter.package_name}}/: .pre-commit-config.yaml  requirements-dev.txt  setup.cfg  tox.ini
{{cookiecutter.package_name}}/.github/workflows/: python-test.yml
{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/: foo.py
{{cookiecutter.package_name}}/tests/: test_foo.py
