[metadata]
name = {{cookiecutter.package_name}}
version = attr: {{cookiecutter.package_name}}.__version__
description = {{cookiecutter.package_description}}
long_description = file: README.rst
author = {{cookiecutter.author}}
author_email = {{cookiecutter.email}}

[options]
package_dir=
    =src
packages = find:

[options.packages.find]
where = src

[flake8]
extend-exclude = .venv,venv

[mypy]
files = src/**/*.py tests/**/*.py
exclude = setup.py
check_untyped_defs = True
disallow_untyped_defs = True
disallow_any_generics = True
no_implicit_optional = True
warn_unused_ignores = True

[mypy-tests.*]
disallow_untyped_defs = False

[coverage:run]
branch = True
source = src

[isort]
profile = black
